--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,17 @@
 	<title></title>
 </head>
 <body>
-<div class="red">
-	salut
+<div class="">
+	<h2>TODO LIST : </h2>
+	<ul id="TodoUl">
+		<!-- <li>TODO 1  <button class="deleteTodo">X</button></li>
+		<li>TODO 2  <button class="deleteTodo">X</button></li>
+		<li>TODO 3  <button class="deleteTodo">X</button></li>
+		<li>TODO 4  <button class="deleteTodo">X</button></li> -->
+	</ul>
+	<input id="newTodo" type="text" name="todo" placeholder="Nouvelle tache">
+	<button  id="clicBtn">Ajouter</button>
 </div>
+<script type="text/javascript" src="/lib/js/todo.js"></script>
 </body>
 </html>
