--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,8 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="/lib/css/style.css">
 	<title></title>
+	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
+
 </head>
 <body>
 <div class="">
@@ -17,5 +19,6 @@
 	<button  id="clicBtn">Ajouter</button>
 </div>
 <script type="text/javascript" src="/lib/js/todo.js"></script>
+
 </body>
 </html>
