--- a/client/index.html
+++ b/client/index.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="/lib/css/style.css">
-	<title></title>
-	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
-
-</head>
-<body>
-<div class="">
-	<h2>TODO LIST : </h2>
-	<ul id="TodoUl">
-		<!-- <li>TODO 1  <button class="deleteTodo">X</button></li>
-		<li>TODO 2  <button class="deleteTodo">X</button></li>
-		<li>TODO 3  <button class="deleteTodo">X</button></li>
-		<li>TODO 4  <button class="deleteTodo">X</button></li> -->
-	</ul>
-	<input id="newTodo" type="text" name="todo" placeholder="Nouvelle tache">
-	<button  id="clicBtn">Ajouter</button>
-</div>
-<script type="text/javascript" src="/lib/js/todo.js"></script>
-
-</body>
+	<head>
+		<link rel="stylesheet" type="text/css" href="/lib/css/style.css">
+		<title></title>
+		<script type="text/javascript" src="/socket.io/socket.io.js"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	</head>
+	<body>
+		<div class="container">
+			<h2>TODO LIST : </h2>
+			
+			<ul id="TodoUl" class="collection">
+				<!-- <li>TODO 1  <button class="deleteTodo">X</button></li>
+				<li>TODO 2  <button class="deleteTodo">X</button></li>
+				<li>TODO 3  <button class="deleteTodo">X</button></li>
+				<li>TODO 4  <button class="deleteTodo">X</button></li> -->
+			</ul>
+			<!-- Modal Structure -->
+			<div id="modal1" class="modal">
+				<div class="modal-content">
+					<h4>Edit Todo</h4>
+					<div class="input-field col s12">
+						<input id="todotoedit" type="text" class="validate">
+						<!-- <label for="last_name">Last Name</label> -->
+					</div>
+				</div>
+				<div class="modal-footer">
+					<a href="#!" class="modal-close waves-effect waves-green btn-flat">Annuler</a>
+					<a id="submitEdit" href="#!" class=" waves-effect waves-green">OK</a>
+				</div>
+			</div>
+			<input id="newTodo" type="text" name="todo" placeholder="Nouvelle tache">
+			<button  id="clicBtn">Ajouter</button>
+		</div>
+		<script type="text/javascript" src="/lib/js/todo.js"></script>
+		
+	</body>
 </html>
