--- a/client/index.html
+++ b/client/index.html
@@ -32,8 +32,10 @@
 					<a id="submitEdit" href="#!" class=" waves-effect waves-green">OK</a>
 				</div>
 			</div>
+
+			
 			<input id="newTodo" type="text" name="todo" placeholder="Nouvelle tache">
-			<button  id="clicBtn">Ajouter</button>
+			<button  id="clicBtn" class="right waves-effect waves-light btn">Ajouter</button>
 		</div>
 		<script type="text/javascript" src="/lib/js/todo.js"></script>
 		
